# TG_admin_bot

./: .env_example  Dockerfile  README.md  create_bot.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
cfg/: cfg.py
handlers/: __init__.py  callbacks_for_pagination.py  help.py  rules.py  start.py
handlers/moder_handlers/: __init__.py  blind_change.py  cards_for_moder.py  department_handler.py  moders_output.py  project_handler.py
handlers/user_handlers/: __init__.py  change_card_by_user.py  show_card.py  show_department_cards.py
keyboard/default/: button_factory.py  button_value.py  inline_keyboards.py  keyboards.py  pagination.py
pkg/db/: __init__.py  db_connect.py  department_func.py  init_db.sql  project_func.py  user_func.py
pkg/db/models/: department.py  project.py  user.py
pkg/settings/: __init__.py  settings.py
states/: __init__.py  department_states.py  project_states.py  show_user_state.py  start_state.py
utils/: check_is_available.py  config_utils.py  context_helper.py  delete_user.py  get_moder_chat_id.py  get_name.py  send_card.py  set_bot_commands.py  validations.py
